# CPP_CA2_Jiri-Uhlir

./: Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  Crawler.cpp  Crawler.h  Hopper.cpp  Hopper.h  README.md  bugs.txt  bugs_life_history_date_time.out  main.cpp
